[workspace]
resolver = "2"
members = [
    "crates/*",
    "dynamics-py",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Antoine Groudiev <antoine.groudiev@ens.psl.eu>"]
readme = "README.md"
description = "An experimental implementation of Rigid Body Dynamics algorithms."
repository = "https://github.com/agroudiev/dynamics"
license-file = "LICENSE"

[workspace.dependencies]
nalgebra = "0.33.2"
numpy = "0.24.0"
pyo3 = { version = "0.24.1", features = ["extension-module"] }
rand = { version = "0.8.5" }

# collider = { path = "../collider/crates/collider" } # for local development
collider = { git = "https://github.com/agroudiev/collider" }