[package]
name = "dynamics-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
description.workspace = true
repository.workspace = true
license-file = "LICENSE"

[lib]
name = "dynamics"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
numpy.workspace = true

collider-rs.workspace = true

dynamics-inertia.workspace = true
dynamics-joint.workspace = true
dynamics-model.workspace = true
dynamics-parse.workspace = true
dynamics-spatial.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]
all-features = true