[package]
name = "dynamics-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
description.workspace = true
repository.workspace = true
license-file = "LICENSE"

[lib]
name = "dynamics"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
numpy.workspace = true

collider-rs.workspace = true

dynamics-inertia = { workspace = true, features = ["python"] }
dynamics-joint = { workspace = true, features = ["python"] }
dynamics-model = { workspace = true, features = ["python"] }
dynamics-parse = { workspace = true, features = ["python"] }
dynamics-spatial = { workspace = true, features = ["python"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
all-features = true
