[package]
name = "dynamics-inertia"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
python = ["pyo3", "numpy", "dynamics-spatial/python"]
default = []

[dependencies]
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
nalgebra = { workspace = true }

dynamics-spatial.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
no-default-features = true
