[package]
name = "dynamics-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
numpy.workspace = true
pyo3.workspace = true
rand.workspace = true
once_cell.workspace = true

collider.workspace = true

dynamics-inertia.workspace = true
dynamics-joint.workspace = true
dynamics-spatial.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "../../dynamics-py/src/docs-header.html" ]
all-features = true