[package]
name = "dynamics-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
collider-rs.workspace = true

dynamics-inertia.workspace = true
dynamics-joint.workspace = true
dynamics-model.workspace = true
dynamics-parse.workspace = true
dynamics-spatial.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "../../dynamics-py/src/docs-header.html" ]
all-features = true