[package]
name = "dynamics-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
python = [
    "dynamics-inertia/python",
    "dynamics-joint/python",
    "dynamics-model/python",
    "dynamics-parse/python",
    "dynamics-spatial/python",
    "collider-rs/python",
]
default = []

[dependencies]
collider-rs.workspace = true

dynamics-inertia.workspace = true
dynamics-joint.workspace = true
dynamics-model.workspace = true
dynamics-parse.workspace = true
dynamics-spatial.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
no-default-features = true
