[package]
name = "dynamics-spatial"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra.workspace = true
numpy = { workspace = true}
pyo3.workspace = true
rand = { workspace = true}
approx.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "../../dynamics-py/src/docs-header.html" ]
all-features = true