[package]
name = "dynamics-spatial"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
python = ["pyo3", "numpy"]
default = []

[dependencies]
nalgebra.workspace = true
numpy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
rand.workspace = true
approx.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
no-default-features = true
