[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
model.workspace = true
joint.workspace = true
spatial.workspace = true
parse.workspace = true

[dev-dependencies]
approx.workspace = true