[package]
name = "dynamics-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true
publish = false

[dependencies]
dynamics-model.workspace = true
dynamics-joint.workspace = true
dynamics-spatial.workspace = true
dynamics-parse.workspace = true

[dev-dependencies]
approx.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "../../dynamics-py/src/docs-header.html" ]
all-features = true