[package]
name = "dynamics-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true
publish = false

[dependencies]
dynamics-rs.workspace = true

[dev-dependencies]
approx.workspace = true
criterion = "0.8.2"

[[bench]]
name = "forward_kinematics"
harness = false

[[bench]]
name = "parse_urdf"
harness = false

[package.metadata.docs.rs]
all-features = true
