[package]
name = "joint"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
approx = { version = "0.5.1" }
pyo3 = { workspace = true }
rand = { workspace = true }

spatial = { workspace = true }