[package]
name = "model"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
collider = { workspace = true }
nalgebra = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true }

spatial = { path = "../spatial" }